Tue Mar 30 20:25:34 2004  Tanaka Akira  <akr@m17n.org>

	* time.c (search_time_t): limit guess range by mktime if it is
	  available.

Tue Mar 30 18:19:00 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_eval): fix SEGV at retry in iterator's receiver.
	  [ruby-dev:23227]

Mon Mar 29 20:17:16 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_exec): follow older behavior if close-on-exec is not
	  available.

	* process.c (rb_fork): protect from exceptions while waiting failed
	  process, if status is given.

Sun Mar 28 16:25:37 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cygwin/GNUmakefile.in (clean-local, distclean-local): remove
	  work files.

	* win32/Makefile.sub (clean-local): ditto.

Sun Mar 28 14:23:02 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/pop.rb: def m( arg ) -> def m(arg).

Sun Mar 28 14:09:13 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/pop.rb (auth): failed when account/password include "%".
	  [ruby-talk:95933]

Sat Mar 27 21:40:41 2004  Tanaka Akira  <akr@m17n.org>

	* (lib/open-uri.rb): permit extra semicolon in content-type field.

Sat Mar 27 10:40:48 2004  Tanaka Akira  <akr@m17n.org>

	* (lib/pp.rb, lib/prettyprint.rb): define seplist in PP::PPMethods
	  instead of PrettyPrint.

Sat Mar 27 01:47:09 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/logger.rb: trim tail space of each line.  no user visible change.

	* lib/rss/dublincore.rb: fixed class definition mismatch.

	* sample/openssl/gen_csr.rb: fixed wrong usage text.

Thu Mar 25 23:15:24 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/ri/ri_options.rb (RI::Options::show_version):
	  Add --version option

Thu Mar 25 21:45:00 2004  Shigeo Kobayashi <shigek@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c: Bug in + and - reported by Bret Jolly
	  fixed.

Thu Mar 25 21:01:32 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* version.c (ruby_show_copyright): obtain copyright year from
	  RUBY_RELEASE_YEAR.

	* win32/resource.rb: ditto.
