@@ -91,6 +91,12 @@ def DelegateClass(superclass)
   def initialize(obj)
     @_dc_obj = obj
   end
+  def __getobj__
+    @_dc_obj
+  end
+  def __setobj__(obj)
+    @_dc_obj = obj
+  end
   EOS
   for method in methods
     begin
@@ -108,13 +114,7 @@ def DelegateClass(superclass)
       raise NameError, "invalid identifier %s" % method, caller(3)
     end
   end
-  def __getobj__
-    @_dc_obj
-  end
-  def __setobj__(obj)
-    @_dc_obj = obj
-  end
-  return klass;
+  return klass
 end
 
 if __FILE__ == $0
